--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -5,7 +5,7 @@ footer.py-5.bg-gray-200.mt-auto
         .d-inline-block
           span &copy; Copyright 2022
           | ,
-          span Biihappy cu&#x1ED9;c s&#x1ED1;ng m&ecirc; ly!
+          span Behappy cu&#x1ED9;c s&#x1ED1;ng m&ecirc; ly!
     .row.mt-2
       .col-12.text-center
         ul.menu.text-muted.fw-bold.order-1.justify-content-center
