--- a/views/account.pug
+++ b/views/account.pug
@@ -51,7 +51,7 @@ block content
                 | Th&ocirc;ng tin h&#x1ED3; s&#x1A1;
             .card-body
               form.form.form-user-data
-                input(type='hidden' name='_csrf-biihappy' value='f1zcOac31FNMM51l7iF7r0JtjHAep2MfwF1UoLv62A0xae1u9n-jPmF47C6FTDXgDSfoI1XAM1SqbxbElqyHfg==')
+                input(type='hidden' name='_csrf-Behappy' value='f1zcOac31FNMM51l7iF7r0JtjHAep2MfwF1UoLv62A0xae1u9n-jPmF47C6FTDXgDSfoI1XAM1SqbxbElqyHfg==')
                 .row
                   .col-12
                     .row.align-items-center
