--- a/views/complete.pug
+++ b/views/complete.pug
@@ -8,7 +8,7 @@ block content
                         h2.fw-bold.mb-5
                             | T&#x1EA1;o website th&agrave;nh c&ocirc;ng!
                         p.fs-lg.text-muted.mb-6.mb-md-6
-                            | Biihappy r&#x1EA5;t t&#x1EF1; h&agrave;o v&igrave; &dstrok;&atilde; tr&#x1EDF; th&agrave;nh m&#x1ED9;t ph&#x1EA7;n trong k&#x1EBF; ho&#x1EA1;ch tr&#x1ECD;ng &dstrok;&#x1EA1;i c&#x1EE7;a b&#x1EA1;n. C&ograve;n b&acirc;y gi&#x1EDD;, h&atilde;y v&agrave;o &quot;Ch&#x1EC9;nh s&#x1EED;a website&quot;, c&#x1EAD;p nh&#x1EAD;t n&#x1ED9;i dung th&#x1EAD;t hay, t&#x1EA3;i l&ecirc;n nh&#x1EEF;ng h&igrave;nh &#x1EA3;nh th&#x1EAD;t &dstrok;&#x1EB9;p, &dstrok;&#x1EC3; website c&#x1EE7;a b&#x1EA1;n tr&#x1EDF; n&ecirc;n &#x1EA5;n t&#x1B0;&#x1EE3;ng nh&#x1EA5;t, v&agrave; chia s&#x1EBB; n&oacute; cho b&#x1EA1;n b&egrave;.
+                            | Behappy r&#x1EA5;t t&#x1EF1; h&agrave;o v&igrave; &dstrok;&atilde; tr&#x1EDF; th&agrave;nh m&#x1ED9;t ph&#x1EA7;n trong k&#x1EBF; ho&#x1EA1;ch tr&#x1ECD;ng &dstrok;&#x1EA1;i c&#x1EE7;a b&#x1EA1;n. C&ograve;n b&acirc;y gi&#x1EDD;, h&atilde;y v&agrave;o &quot;Ch&#x1EC9;nh s&#x1EED;a website&quot;, c&#x1EAD;p nh&#x1EAD;t n&#x1ED9;i dung th&#x1EAD;t hay, t&#x1EA3;i l&ecirc;n nh&#x1EEF;ng h&igrave;nh &#x1EA3;nh th&#x1EAD;t &dstrok;&#x1EB9;p, &dstrok;&#x1EC3; website c&#x1EE7;a b&#x1EA1;n tr&#x1EDF; n&ecirc;n &#x1EA5;n t&#x1B0;&#x1EE3;ng nh&#x1EA5;t, v&agrave; chia s&#x1EBB; n&oacute; cho b&#x1EA1;n b&egrave;.
                 .row.justify-content-center
                     .col-12.col-sm-6.col-md-5.col-lg-4
                         .d-block.text-center
