--- a/views/detailtemplate.pug
+++ b/views/detailtemplate.pug
@@ -13,21 +13,21 @@ block content
           .card.card-row.shadow-light-lg.mb-6.lift.lift-lg
             .row.gx-0
               .col-12
-              a.col-12.col-md-6.order-md-2.bg-cover.card-img-end(style='background-image: url(/img/templates/picture1.jpg);' href='https://preview.iwedding.info/?template=6174ee7a7a1c7661fb0a671c' target='_blank')
-                img.img-fluid.d-md-none.invisible(src='/img/templates/picture1.jpg' alt='Modern')
+              a.col-12.col-md-6.order-md-2.bg-cover.card-img-end(style='background-image: url(/img/wedding/event-62c64eae3b210d2cc475d8ca-1657169304283.jpeg);' href='https://preview.iwedding.info/?template=6174ee7a7a1c7661fb0a671c' target='_blank')
+                img.img-fluid.d-md-none.invisible(src='/img/wedding/picture1.jpg' alt='Modern')
                 .shape.shape-start.shape-fluid-y.text-white.d-none.d-md-block
                   svg(viewbox='0 0 112 690' fill='none' xmlns='http://www.w3.org/2000/svg')
                     path(d='M0 0h62.759v172C38.62 384 112 517 112 517v173H0V0z' fill='currentColor')
               .col-12.col-md-6.order-md-1
-                a.card-body(href='/wedding/preview/62ad2ce22733454e4826ab2a' target='_blank')
+                a.card-body(href='/wedding/preview/62c6549c3b210d2cc475d8d5' target='_blank')
                   h3
-                    | Lưu Phương &amp; Triệu Thúy 
+                    | Duy Phương &amp; Bích Trinh
                   p.mb-0.text-muted
                     | Ch&#x1EE7; &dstrok;&#x1EC1; h&#x1B0;&#x1EDB;ng &dstrok;&#x1EBF;n s&#x1EF1; tr&#x1EBB; trung, t&#x1B0;&#x1A1;i m&#x1EDB;i v&agrave; tr&agrave;n &dstrok;&#x1EA7;y n&abreve;ng l&#x1B0;&#x1EE3;ng c&#x1EE7;a tu&#x1ED5;i tr&#x1EBB;. Mang &dstrok;&#x1EBF;n c&#x1EA3;m ph&oacute;ng kho&aacute;ng, t&#x1EF1; do kh&ocirc;ng theo m&#x1ED9;t khu&ocirc;n kh&#x1ED5; nh&#x1EA5;t &dstrok;&#x1ECB;nh n&agrave;o.
-                .card-meta(href='/wedding/preview/62ad2ce22733454e4826ab2a' target='_blank')
+                .card-meta(href='/wedding/preview/62c6549c3b210d2cc475d8d5' target='_blank')
                   hr.card-meta-divider
                   .d-block.w-100.text-center
-                    a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62ad2ce22733454e4826ab2a' target='_blank') Xem giao di&#x1EC7;n
+                    a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62c6549c3b210d2cc475d8d5' target='_blank') Xem giao di&#x1EC7;n
         if user
           .col-12.col-md-10.col-lg-7
             .card.shadow-light-lg.overflow-hidden.text-center.text-lg-start
