--- a/views/detailtemplate2.pug
+++ b/views/detailtemplate2.pug
@@ -13,21 +13,21 @@ block content
           .card.card-row.shadow-light-lg.mb-6.lift.lift-lg
             .row.gx-0
               .col-12
-              a.col-12.col-md-6.order-md-2.bg-cover.card-img-end(style='background-image: url(/img/templates/picture2.jpg);' target='_blank')
-                img.img-fluid.d-md-none.invisible(src='/img/templates/picture2.jpg' alt='Modern')
+              a.col-12.col-md-6.order-md-2.bg-cover.card-img-end(style='background-image: url(/img/wedding/140706412_1508852852621831_7522651747783136728_n.jpg);' target='_blank')
+                img.img-fluid.d-md-none.invisible(src='/img/wedding/140706412_1508852852621831_7522651747783136728_n.jpg' alt='Modern')
                 .shape.shape-start.shape-fluid-y.text-white.d-none.d-md-block
                   svg(viewbox='0 0 112 690' fill='none' xmlns='http://www.w3.org/2000/svg')
                     path(d='M0 0h62.759v172C38.62 384 112 517 112 517v173H0V0z' fill='currentColor')
               .col-12.col-md-6.order-md-1
-                a.card-body(href='/wedding/preview/62ad1f85a77b2f3328f4e79f' target='_blank')
+                a.card-body(href='/wedding/preview/62c64f8f3b210d2cc475d8cc' target='_blank')
                   h3
-                    | Anh Đạt &amp; Minh Hằng                            
+                    | Huy Hùng &amp; Hồng Duyên                            
                   p.mb-0.text-muted
                     | Yêu những điều giản dị và thuần khiết. Bắt trọn hạnh phúc trong từng khoảnh khắc. Chủ nghĩa tối giản lấy màu trắng là màu chủ đạo và sắc xanh tạo điểm nhấn.                            
-                .card-meta(href='/wedding/preview/62ad1f85a77b2f3328f4e79f' target='_blank')
+                .card-meta(href='/wedding/preview/62c64f8f3b210d2cc475d8cc' target='_blank')
                   hr.card-meta-divider
                   .d-block.w-100.text-center
-                    a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62ad1f85a77b2f3328f4e79f' target='_blank') Xem giao di&#x1EC7;n
+                    a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62c64f8f3b210d2cc475d8cc' target='_blank') Xem giao di&#x1EC7;n
         if user
           .col-12.col-md-10.col-lg-7
             .card.shadow-light-lg.overflow-hidden.text-center.text-lg-start
