--- a/views/editwedsite.pug
+++ b/views/editwedsite.pug
@@ -109,14 +109,14 @@ body.flex-colum.h-100(style='padding-top:65px!important')
                     .d-inline-block
                         span &copy; Copyright 2022
                         | ,
-                        span Biihappy cu&#x1ED9;c s&#x1ED1;ng m&ecirc; ly!
+                        span Behappy cu&#x1ED9;c s&#x1ED1;ng m&ecirc; ly!
             .row.mt-2
                 .col-12.text-center
                     ul.menu.text-muted.fw-bold.order-1.justify-content-center
                         li.menu-item
                             a.menu-link.px-2.text-muted(href='/vi/about-us') Gi&#x1EDB;i thi&#x1EC7;u
                         li.menu-item
-                            a.menu-link.px-2.text-muted(href='https://blog.biihappy.com' target='_blank') Blog
+                            a.menu-link.px-2.text-muted(href='https://blog.Behappy.com' target='_blank') Blog
                         li.menu-item
                             a.menu-link.px-2.text-muted(href='/vi/privacy') Ch&iacute;nh s&aacute;ch b&#x1EA3;o m&#x1EAD;t
                         li.menu-item
