--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -11,7 +11,7 @@ block content
                 | N&#x1EC1;n t&#x1EA3;ng t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i
                 span.fw-bold  mi&#x1EC5;n ph&iacute;
                 |  t&#x1EEB;
-                span.text-danger  Biihappy 
+                span.text-danger  Behappy 
               p.lead.text-center.text-md-start.text-muted.mb-6.mb-lg-8
                 | H&atilde;y t&#x1EB7;ng cho ng&agrave;y c&#x1B0;&#x1EDB;i c&#x1EE7;a b&#x1EA1;n m&#x1ED9;t wedding website tuy&#x1EC7;t v&#x1EDD;i v&agrave;
                 | ho&agrave;n to&agrave;n mi&#x1EC5;n ph&iacute;.
@@ -39,34 +39,34 @@ block content
                 | Xem, c&#x1EA3;m nh&#x1EAD;n v&agrave; &dstrok;&#x1EEB;ng qu&ecirc;n &dstrok;&#x1EC3; l&#x1EA1;i nh&#x1EEF;ng l&#x1EDD;i ch&uacute;c t&#x1ED1;t &dstrok;&#x1EB9;p cho h&#x1ECD;
                 | nh&eacute;!
           .row
-            .col-12.col-md-6.col-lg-6.d-flex.mb-7.site-item(data-id='62ad2ce22733454e4826ab2a')
+            .col-12.col-md-6.col-lg-6.d-flex.mb-7.site-item(data-id='62c6549c3b210d2cc475d8d5')
               .card.pt-14.overlay.overlay-black.overlay-40.bg-cover.shadow-light-lg(style='background-image: url(/img/wedding/banner_top.png);')
                 .card-meta.mt-auto.mb-0.pb-0
                   .d-block.w-100.text-center
-                    a.btn.btn-sm.btn-outline-light.mt-2(href='/wedding/preview/62ad2ce22733454e4826ab2a' target='_blank') Xem trang
-                a.card-body.mt-0.py-7.mt-0(href='/wedding/preview/62ad2ce22733454e4826ab2a' target='_blank')
+                    a.btn.btn-sm.btn-outline-light.mt-2(href='/wedding/preview/62c6549c3b210d2cc475d8d5' target='_blank') Xem trang
+                a.card-body.mt-0.py-7.mt-0(href='/wedding/preview/62c6549c3b210d2cc475d8d5' target='_blank')
                   p.mb-0.text-white
-                    | Lưu Phương &amp; Triệu Thúy - Our wedding date:
+                    | Duy Phương &amp; Bích Trinh - Our wedding date:
                     | 2022-07-01 | T&ocirc;i y&ecirc;u b&#x1EA1;n v&igrave; t&#x1EA5;t c&#x1EA3; nh&#x1EEF;ng g&igrave; b&#x1EA1;n &dstrok;ang c&oacute;, t&#x1EA5;t
                     | c&#x1EA3; nh&#x1EEF;ng g&igrave; b&#x1EA1;n &dstrok;&atilde;&mldr;
-                a.card-meta.text-center(href='/wedding/preview/62ad2ce22733454e4826ab2a' target='_blank')
+                a.card-meta.text-center(href='/wedding/preview/62c6549c3b210d2cc475d8d5' target='_blank')
                   hr.card-meta-divider.bg-white-20
                   .avatar.avatar-sm.me-2
                     svg.bi.bi-heart-fill.text-danger.w-100.h-100(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewbox='0 0 16 16')
                       path(fill-rule='evenodd' d='M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z')
                   h5.text-uppercase.text-white.me-2.mb-0.text-center
-                    | Lưu Phương &amp; Triệu Thúy 
-            .col-12.col-md-6.col-lg-6.d-flex.mb-7.site-item(data-id='62ad1f85a77b2f3328f4e79f')
+                    | Duy Phương &amp; Bích Trinh 
+            .col-12.col-md-6.col-lg-6.d-flex.mb-7.site-item(data-id='62c64f8f3b210d2cc475d8cc')
               .card.pt-14.overlay.overlay-black.overlay-40.bg-cover.shadow-light-lg(style='background-image: url(/img/wedding/banner_middle.png);')
                 .card-meta.mt-auto.mb-0.pb-0
                   .d-block.w-100.text-center
-                    a.btn.btn-sm.btn-outline-light.mt-2(href='/wedding/preview/62ad1f85a77b2f3328f4e79f' target='_blank') Xem trang
-                a.card-body.mt-0.py-7.mt-0(href='/wedding/preview/62ad1f85a77b2f3328f4e79f' target='_blank')
+                    a.btn.btn-sm.btn-outline-light.mt-2(href='/wedding/preview/62c64f8f3b210d2cc475d8cc' target='_blank') Xem trang
+                a.card-body.mt-0.py-7.mt-0(href='/wedding/preview/62c64f8f3b210d2cc475d8cc' target='_blank')
                   p.mb-0.text-white
-                    | Anh Đạt &amp; Minh Hằng - Our wedding date: 2022-06-30 | T&ocirc;i
+                    | Huy Hùng &amp; Hồng Duyên - Our wedding date: 2022-06-30 | T&ocirc;i
                     | c&oacute; th&#x1EC3; chinh ph&#x1EE5;c th&#x1EBF; gi&#x1EDB;i b&#x1EB1;ng m&#x1ED9;t tay mi&#x1EC5;n l&agrave; b&#x1EA1;n &dstrok;ang n&#x1EAF;m
                     | tay kia
-                a.card-meta.text-center(href='/wedding/preview/62ad1f85a77b2f3328f4e79f' target='_blank')
+                a.card-meta.text-center(href='/wedding/preview/62c64f8f3b210d2cc475d8cc' target='_blank')
                   hr.card-meta-divider.bg-white-20
                   .avatar.avatar-sm.me-2
                     svg.bi.bi-heart-fill.text-danger.w-100.h-100(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewbox='0 0 16 16')
@@ -85,7 +85,7 @@ block content
               p.fs-lg.text-muted.mb-7.mb-md-9
                 | S&#x1ED1;ng trong th&#x1EDD;i &dstrok;&#x1EA1;i c&ocirc;ng ngh&#x1EC7; s&#x1ED1;, t&#x1EA1;i sao ch&uacute;ng ta kh&ocirc;ng c&oacute; m&#x1ED9;t website c&#x1B0;&#x1EDB;i c&#x1EE7;a ri&ecirc;ng m&igrave;nh? Th&#x1EAD;t &dstrok;&#x1A1;n gi&#x1EA3;n &dstrok;&#x1EC3; s&#x1EDF; h&#x1EEF;u m&#x1ED9;t giao di&#x1EC7;n t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i v&#x1EDB;i c&aacute;c t&iacute;nh n&abreve;ng &dstrok;&#x1ED9;c &dstrok;&aacute;o, ngh&#x1EC7; thu&#x1EAD;t. V&agrave; &dstrok;&#x1EB7;c bi&#x1EC7;t, n&oacute; ho&agrave;n to&agrave;n 
                 strong Mi&#x1EC5;n Ph&iacute;
-                |  v&#x1EDB;i Biihappy.
+                |  v&#x1EDB;i Behappy.
           .row
             .col-12.col-md-6.col-lg-4.text-center
               .icon-circle.bg-danger.text-white.mb-5
@@ -107,13 +107,13 @@ block content
                 | Ch&#x1EB3;ng c&ograve;n lo s&#x1EE3; cu&#x1ED1;n album h&igrave;nh c&#x1B0;&#x1EDB;i b&#x1ECB; h&#x1B0; h&#x1ECF;ng hay &dstrok;&ocirc;i khi &dstrok;&#x1EC3; &#x1EDF; &dstrok;&acirc;u kh&ocirc;ng t&igrave;m th&#x1EA5;y. &Dstrok;&atilde; c&oacute; IWedding l&#x1B0;u tr&#x1EEF; gi&uacute;p b&#x1EA1;n, d&#x1EC5; d&agrave;ng chia s&#x1EBB; n&oacute; cho b&#x1EA5;t k&#x1EF3; ai v&agrave; b&#x1EA5;t k&igrave; &dstrok;&acirc;u. Th&#x1EAD;t tuy&#x1EC7;t v&#x1EDD;i &dstrok;&uacute;ng kh&ocirc;ng!
             .col-12.col-md-6.col-lg-4.text-center
               .icon-circle.bg-warning.text-white.mb-5
-                img(src='https://biihappy.com/static/img/wedding/icons/template_icon.svg' width='40' alt='Thư viện giao diện tuyệt đẹp và được cập nhật liên tục')
+                img(src='https://Behappy.com/static/img/wedding/icons/template_icon.svg' width='40' alt='Thư viện giao diện tuyệt đẹp và được cập nhật liên tục')
               h3.fw-bold Th&#x1B0; vi&#x1EC7;n giao di&#x1EC7;n tuy&#x1EC7;t &dstrok;&#x1EB9;p v&agrave; &dstrok;&#x1B0;&#x1EE3;c c&#x1EAD;p nh&#x1EAD;t li&ecirc;n t&#x1EE5;c
               p.text-muted.mb-8
                 | B&#x1EA1;n s&#x1EBD; y&ecirc;u ngay nh&#x1EEF;ng m&#x1EAB;u giao di&#x1EC7;n c&#x1EE7;a ch&uacute;ng t&ocirc;i t&#x1EEB; c&aacute;i nh&igrave;n &dstrok;&#x1EA7;u ti&ecirc;n. Li&ecirc;n t&#x1EE5;c c&#x1EAD;p nh&#x1EAD;t v&agrave; c&#x1EA3;i ti&#x1EBF;n. B&#x1EA1;n c&oacute; th&#x1EC3; tho&#x1EA3;i m&aacute;i l&#x1EF1;a ch&#x1ECD;n v&agrave; thay &dstrok;&#x1ED5;i b&#x1EA5;t k&#x1EF3; l&uacute;c n&agrave;o ch&#x1EC9; v&#x1EDB;i v&agrave;i thao t&aacute;c &dstrok;&#x1A1;n gi&#x1EA3;n.
             .col-12.col-md-6.col-lg-4.text-center
               .icon-circle.bg-success.text-white.mb-5
-                img(src='https://biihappy.com/static/img/wedding/icons/heart_icon.svg' width='40' alt='Cho phép bạn bè gửi lời chúc mừng, và lưu giữ mãi mãi')
+                img(src='https://Behappy.com/static/img/wedding/icons/heart_icon.svg' width='40' alt='Cho phép bạn bè gửi lời chúc mừng, và lưu giữ mãi mãi')
               h3.fw-bold Cho ph&eacute;p b&#x1EA1;n b&egrave; g&#x1EED;i l&#x1EDD;i ch&uacute;c m&#x1EEB;ng, v&agrave; l&#x1B0;u gi&#x1EEF; m&atilde;i m&atilde;i
               p.text-muted.mb-8
                 | H&atilde;y &dstrok;&#x1EC3; nh&#x1EEF;ng l&#x1EDD;i ch&uacute;c m&#x1EEB;ng c&#x1EE7;a b&#x1EA1;n b&egrave; &dstrok;&#x1B0;&#x1EE3;c l&#x1B0;u gi&#x1EEF; m&atilde;i theo th&#x1EDD;i gian. Th&#x1EAD;t tuy&#x1EC7;t v&#x1EDD;i n&#x1EBF;u 10 n&abreve;m, 20 n&abreve;m sau b&#x1EA1;n v&#x1EAB;n c&ograve;n nh&igrave;n th&#x1EA5;y n&oacute; v&agrave; h&#x1ED3;i t&#x1B0;&#x1EDF;ng l&#x1EA1;i nh&#x1EEF;ng ho&agrave;i ni&#x1EC7;m c&#x1EE7;a ng&agrave;y tr&#x1ECD;ng &dstrok;&#x1EA1;i.
