--- a/views/managementPage.pug
+++ b/views/managementPage.pug
@@ -18,7 +18,7 @@ block  content
                         - var numb = 0;
                         - for(let i = 0;i<weddings.length;i++){numb++}
                         strong=numb
-                        |  websites t&#x1EEB; n&#x1EC1;n t&#x1EA3;ng Biihappy.
+                        |  websites t&#x1EEB; n&#x1EC1;n t&#x1EA3;ng Behappy.
                         span.d-block.text-center
                             a.btn.btn-lg.btn-danger-soft.mt-3(href='/wedding/templates')
                                 | T&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i
