--- a/views/templates.pug
+++ b/views/templates.pug
@@ -15,37 +15,37 @@ block content
     section.pt-7.pt-md-10.pb-7
         .container
             #sectionTemplates.row
-                .col-12.col-md-6.col-lg-6.d-flex.mb-7.template-item(id='62ad2ce22733454e4826ab2a')
+                .col-12.col-md-6.col-lg-6.d-flex.mb-7.template-item(id='62c6549c3b210d2cc475d8d5')
                     .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
                         a.card-img-top(href='#')
-                            img(src='/img/templates/picture1.jpg' alt="Modern" class="card-img-top")
+                            img(src='/img/wedding/event-62c64eae3b210d2cc475d8ca-1657169304283.jpeg' alt="Modern" class="card-img-top")
                             .position-relative
                                 .shape.shape-bottom.shape-fluid-x.text-white
                                     svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
                                         path(fill-rule='evenodd' clip-rule='evenodd' d='M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z' fill='currentColor')
                         a.card-body(href='start3bf4.html?template=62aadf5bd179c5190c7e936c')
-                            h3 Lưu Phương &amp; Triệu Thúy 
+                            h3 Duy Phương &amp; Bích Trinh 
                             p.mb-0.text-muted
                                 | Ch&#x1EE7; &dstrok;&#x1EC1; h&#x1B0;&#x1EDB;ng &dstrok;&#x1EBF;n s&#x1EF1; tr&#x1EBB; trung, t&#x1B0;&#x1A1;i m&#x1EDB;i v&agrave; tr&agrave;n &dstrok;&#x1EA7;y n&abreve;ng l&#x1B0;&#x1EE3;ng c&#x1EE7;a tu&#x1ED5;i tr&#x1EBB;. Mang &dstrok;&#x1EBF;n c&#x1EA3;m ph&oacute;ng kho&aacute;ng, t&#x1EF1; do kh&ocirc;ng theo m&#x1ED9;t khu&ocirc;n kh&#x1ED5; nh&#x1EA5;t &dstrok;&#x1ECB;nh n&agrave;o.
                         .card-meta.mt-auto
                             hr.card-meta-divider
                             .d-block.w-100.text-center
-                                a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62ad2ce22733454e4826ab2a' target='_blank') Xem tr&#x1B0;&#x1EDB;c
+                                a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62c6549c3b210d2cc475d8d5' target='_blank') Xem tr&#x1B0;&#x1EDB;c
                                 a.btn.btn-sm.btn-danger-soft(href='/wedding/templates/createWedding1'  target='_blank') T&#x1EA1;o website
                 .col-12.col-md-6.col-lg-6.d-flex.mb-7.template-item(data-id='62793abbf277951fc0119a7b')
                     .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
-                        a.card-img-top(href='/wedding/preview/62ad1f85a77b2f3328f4e79f')
-                            img.card-img-top(src='/img/templates/picture2.jpg' alt='Minimalism')
+                        a.card-img-top(href='/wedding/preview/62c64f8f3b210d2cc475d8cc')
+                            img.card-img-top(src='/img/wedding/140706412_1508852852621831_7522651747783136728_n.jpg' alt='Minimalism')
                             .position-relative
                                 .shape.shape-bottom.shape-fluid-x.text-white
                                     svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
                                         path(fill-rule='evenodd' clip-rule='evenodd' d='M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z' fill='currentColor')
-                        a.card-body(href='/wedding/preview/62ad1f85a77b2f3328f4e79f')
-                            h3 Anh Đạt &amp; Minh Hằng
+                        a.card-body(href='/wedding/preview/62c64f8f3b210d2cc475d8cc')
+                            h3 Huy Hùng &amp; Hồng Duyên
                             p.mb-0.text-muted
                                 | Y&ecirc;u nh&#x1EEF;ng &dstrok;i&#x1EC1;u gi&#x1EA3;n d&#x1ECB; v&agrave; thu&#x1EA7;n khi&#x1EBF;t. B&#x1EAF;t tr&#x1ECD;n h&#x1EA1;nh ph&uacute;c trong t&#x1EEB;ng kho&#x1EA3;nh kh&#x1EAF;c. Ch&#x1EE7; ngh&itilde;a t&#x1ED1;i gi&#x1EA3;n l&#x1EA5;y m&agrave;u tr&#x1EAF;ng l&agrave; m&agrave;u ch&#x1EE7; &dstrok;&#x1EA1;o v&agrave; s&#x1EAF;c xanh t&#x1EA1;o &dstrok;i&#x1EC3;m nh&#x1EA5;n.
                         .card-meta.mt-auto
                             hr.card-meta-divider
                             .d-block.w-100.text-center
-                                a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62ad1f85a77b2f3328f4e79f' target='_blank') Xem tr&#x1B0;&#x1EDB;c
+                                a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62c64f8f3b210d2cc475d8cc' target='_blank') Xem tr&#x1B0;&#x1EDB;c
                                 a.btn.btn-sm.btn-danger-soft(href='/wedding/templates/createWedding2'  target='_blank') T&#x1EA1;o website
