--- a/template/preview.html
+++ b/template/preview.html
@@ -13,9 +13,9 @@
 		<link rel="stylesheet" href="https://preview.iwedding.info/templates/template6/css/style.css?v=20220227">
         <link rel="stylesheet" href="/static/css/themef9f5.css?v=202111121" />
 		<link rel="stylesheet" id="nd_options_style-css" href="http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/plugins/nd-shortcodes/css/style.css?ver=5.2.2" type="text/css" media="all">
-		<link rel="stylesheet" id="nd_options_font_family_h-css" href="http://fonts.googleapis.com/css?family=Cinzel%3A400%2C700&amp;ver=5.2.2" type="text/css" media="all">
-		<link rel="stylesheet" id="nd_options_font_family_p-css" href="http://fonts.googleapis.com/css?family=Halant%3A300%2C400%2C700&amp;ver=5.2.2" type="text/css" media="all">
-		<link rel="stylesheet" id="nd_options_font_family_third-css" href="http://fonts.googleapis.com/css?family=Great+Vibes&amp;ver=5.2.2" type="text/css" media="all">
+		<link rel="stylesheet" id="nd_options_font_family_h-css" href="https://fonts.googleapis.com/css?family=Cinzel%3A400%2C700&amp;ver=5.2.2" type="text/css" media="all">
+		<link rel="stylesheet" id="nd_options_font_family_p-css" href="https://fonts.googleapis.com/css?family=Halant%3A300%2C400%2C700&amp;ver=5.2.2" type="text/css" media="all">
+		<link rel="stylesheet" id="nd_options_font_family_third-css" href="https://fonts.googleapis.com/css?family=Great+Vibes&amp;ver=5.2.2" type="text/css" media="all">
 		<link rel="stylesheet" id="nd_tds_style-css" href="http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/plugins/nd-theme-demos-switcher/css/style.css?ver=5.2.2" type="text/css" media="all">
 		<link rel="stylesheet" href="/template/static/css/style.css">
 </head>
