--- a/views/overview.pug
+++ b/views/overview.pug
@@ -8,7 +8,7 @@ head
   link(href='https://fonts.googleapis.com/css?family=Pacifico%7CWork+Sans:400,300,600,400italic,700%7CAmatic+SC:400,700&subset=latin-ext' rel='stylesheet' type='text/css')
   link(rel='stylesheet' href='https://preview.iwedding.info/templates/template6/css/style.css?v=20220227')
   link(href="https://aancouple.iwedding.info/templates/template5/css/libs.css?v=20220523" rel="stylesheet")
-  link#nd_options_style-css(rel='stylesheet' href='//www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/plugins/nd-shortcodes/css/style.css?ver=5.2.2' type='text/css' media='all')
+  link(rel='stylesheet' href='/css/three/shortcodes.css')
   link#nd_options_font_family_h-css(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Cinzel%3A400%2C700&ver=5.2.2' type='text/css' media='all')
   link#nd_options_font_family_p-css(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Halant%3A300%2C400%2C700&ver=5.2.2' type='text/css' media='all')
   link#nd_options_font_family_third-css(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Great+Vibes&ver=5.2.2' type='text/css' media='all')
@@ -71,7 +71,7 @@ if(wedding)
       .zn-addon-wrapper(type='announcement-bar')
       .zn-addon-wrapper(type='breakpoints')
       .zn-addon-wrapper(type='custom-css')
-    .nd_options_section.nd_options_background_size_cover(style='background-image:url(http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/img-1.jpg);width:calc(100% / 3)')
+    .nd_options_section.nd_options_background_size_cover(style='background-image:url(https://www.porosevents.gr/img/gallery/img4.jpg);width:calc(100% / 3)')
       .nd_options_section.nd_options_bg_greydark_alpha_5
         .nd_options_section.nd_options_text_align_center
           .nd_options_section.nd_options_height_100
@@ -85,7 +85,7 @@ if(wedding)
       .vc_column-inner
         .wpb_wrapper
           // START FOCUS
-          .nd_options_section.nd_options_background_size_cover(style='background-image:url(http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/uploads/sites/2/2016/10/img-2.jpg);width:calc(100% / 3)')
+          .nd_options_section.nd_options_background_size_cover(style='background-image:url(https://cdn.biihappy.com/ziiweb/website/62b52ff1ba6d1a4f5335f084/templates/6174edbdff1ef271cb2d8bc4/56c85e6e0c5430c0b61d6e4efa2ca25e.jpg);width:calc(100% / 3)')
             .nd_options_section.nd_options_bg_greydark_alpha_5
               .nd_options_section.nd_options_text_align_center
                 .nd_options_section.nd_options_height_100
