--- a/views/overview2.pug
+++ b/views/overview2.pug
@@ -496,7 +496,7 @@ if(wedding)
     .bii-logo:hover .bii-logo-secondary-content{ transform: translate3d(0, 0, 0);}
     .bii-logo-secondary{position: absolute;width: 350px;right: 25px;height: 50px;overflow: hidden;visibility: hidden;}
     .bii-logo-secondary-content{position: absolute;width: 350px;right: -25px;background: #fff;height: 50px;padding: 13px 53px 13px 11px;border: 1px solid #df4759;border-radius: 30px;z-index: 9999;font-size:15px;transform: translate3d(100%, 0, 0);transition: transform 175ms ease;font-family: arial;font-weight: 200;color: #000;}
-  // <div class="bii-logo"><div class="bii-logo-secondary"><div class="bii-logo-secondary-content">Nền tảng tạo Website đám cưới miễn phí!</div></div><a href="https://biihappy.com/vi/wedding" target="_blank"><img src="https://lecuoiducquyen.iwedding.info/common/imgs/bii.png" /></a></div>
+  //-  <div class="bii-logo"><div class="bii-logo-secondary"><div class="bii-logo-secondary-content">Nền tảng tạo Website đám cưới miễn phí!</div></div><a href="https://biihappy.com/vi/wedding" target="_blank"><img src="https://lecuoiducquyen.iwedding.info/common/imgs/bii.png" /></a></div>
   .bii-footer(style='background-color: #000;border-top:2px solid #df4759;padding: 15px 0;color:#fff;text-align:center;letter-spacing: 1px;')
     .container
       | &star;( &copy; 2022 
@@ -504,6 +504,8 @@ if(wedding)
       |  | 
       a(style='color:#fff;' href='https://biihappy.com/vi/wedding' target='_blank') N&#x1EC1;n t&#x1EA3;ng t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i mi&#x1EC5;n ph&iacute; t&#x1EEB; Biihappy
       |  )&star;
+  #cmtio
+//- script(src='http://cmtio.vercel.app/client.js')
 script(src='/js/getFirstLetter.js')
 script(src='/js/getTime.js')
 script(src='/js/bundle.js')
